tests/ui/trailing_punct.stderr
error: unexpected token
 --> tests/ui/trailing_punct.rs:4:19
  |
4 | type X = Cursor!( . );
  |                   ^
